<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pantalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fav_margin"
            android:hint="@string/numero"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/numero"
            android:textStyle="bold|italic" />


        <EditText
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pantalla"
            android:layout_marginStart="@dimen/fav_margin"
            android:layout_marginTop="@dimen/fav_margin"
            android:layout_marginEnd="@dimen/fav_margin"
            android:layout_marginBottom="@dimen/fav_margin"
            android:autofillHints=""
            android:hint="@string/hint"
            android:inputType="number"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numero"
            android:layout_margin="@dimen/fav_margin"
            android:text="@string/game"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jugar"
            android:layout_margin="@dimen/fav_margin"
            android:text="@string/info"

            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/resert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/numero"
            android:layout_toEndOf="@id/jugar"
            android:layout_margin="@dimen/fav_margin"
            android:text="@string/resert"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="191dp"
            android:layout_height="161dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="329dp"
            android:layout_marginEnd="27dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/o"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="334dp" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>